--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ jdk:
 - oraclejdk8
 before_install: wget http://download.jetbrains.com/mps/2017.2/MPS-2017.2-EAP3.zip
 install: unzip MPS-2017.2-EAP3.zip
-script: ant -Dmps_home=./MPS\ 2017.2\ EAP clean generate assemble
+script: ant -Dmps_home=./MPS\ 2017.1 clean generate assemble
 before_deploy: mv build/artifacts/com.dslfoundry.plaintextgen/com.dslfoundry.plaintextgen.zip build/artifacts/com.dslfoundry.plaintextgen/com.dslfoundry.plaintextgen-mps2017.2-EAP3.zip
 deploy:
   provider: releases
