--- a/build.xml
+++ b/build.xml
@@ -24,11 +24,9 @@
   </path>
   
   <target name="assemble" depends="classes, declare-mps-tasks">
-    <mkdir dir="${build.layout}" />
-    <mkdir dir="${build.tmp}/default/com.dslfoundry.plaintextgen.zip" />
-    <mkdir dir="${build.tmp}/default/com.dslfoundry.plaintextgen.zip/com.dslfoundry.plaintextgen" />
-    <mkdir dir="${build.tmp}/default/com.dslfoundry.plaintextgen.zip/com.dslfoundry.plaintextgen/META-INF" />
-    <echoxml file="${build.tmp}/default/com.dslfoundry.plaintextgen.zip/com.dslfoundry.plaintextgen/META-INF/plugin.xml">
+    <mkdir dir="${build.layout}/com.dslfoundry.plaintextgen" />
+    <mkdir dir="${build.layout}/com.dslfoundry.plaintextgen/META-INF" />
+    <echoxml file="${build.layout}/com.dslfoundry.plaintextgen/META-INF/plugin.xml">
       <idea-plugin xmlns:xi="http://www.w3.org/2001/XInclude">
         <id>com.dslfoundry.plaintextgen</id>
         <name>com.dslfoundry.plaintextgen</name>
@@ -44,8 +42,8 @@
         </extensions>
       </idea-plugin>
     </echoxml>
-    <mkdir dir="${build.tmp}/default/com.dslfoundry.plaintextgen.zip/com.dslfoundry.plaintextgen/languages" />
-    <mkdir dir="${build.tmp}/default/com.dslfoundry.plaintextgen.zip/com.dslfoundry.plaintextgen/languages/com.dslfoundry.plaintextgen" />
+    <mkdir dir="${build.layout}/com.dslfoundry.plaintextgen/languages" />
+    <mkdir dir="${build.layout}/com.dslfoundry.plaintextgen/languages/com.dslfoundry.plaintextgen" />
     <mkdir dir="${build.tmp}/default/com.dslfoundry.plaintextgen.jar" />
     <mkdir dir="${build.tmp}/default/com.dslfoundry.plaintextgen.jar/META-INF" />
     <echoxml file="${build.tmp}/default/com.dslfoundry.plaintextgen.jar/META-INF/module.xml">
@@ -73,7 +71,7 @@
         <sources jar="com.dslfoundry.plaintextgen-src.jar" descriptor="com.dslfoundry.plaintextgen.mpl" />
       </module>
     </echoxml>
-    <jar destfile="${build.tmp}/default/com.dslfoundry.plaintextgen.zip/com.dslfoundry.plaintextgen/languages/com.dslfoundry.plaintextgen/com.dslfoundry.plaintextgen.jar" duplicate="preserve">
+    <jar destfile="${build.layout}/com.dslfoundry.plaintextgen/languages/com.dslfoundry.plaintextgen/com.dslfoundry.plaintextgen.jar" duplicate="preserve">
       <fileset dir="${build.tmp}/java/out/com.dslfoundry.plaintextgen" />
       <fileset dir="${basedir}/languages/com.dslfoundry.plaintextgen" includes="icons/**, resources/**" />
       <fileset dir="${basedir}/languages/com.dslfoundry.plaintextgen/source_gen" includes="**/trace.info, **/exports, **/*.mps, **/checkpoints" />
@@ -101,7 +99,7 @@
         <sources jar="com.dslfoundry.plaintextgen-src.jar" descriptor="com.dslfoundry.plaintextgen.mpl" />
       </module>
     </echoxml>
-    <jar destfile="${build.tmp}/default/com.dslfoundry.plaintextgen.zip/com.dslfoundry.plaintextgen/languages/com.dslfoundry.plaintextgen/com.dslfoundry.plaintextgen-generator.jar" duplicate="preserve">
+    <jar destfile="${build.layout}/com.dslfoundry.plaintextgen/languages/com.dslfoundry.plaintextgen/com.dslfoundry.plaintextgen-generator.jar" duplicate="preserve">
       <fileset dir="${build.tmp}/java/out/com.dslfoundry.plaintextgen#5198309202559528987" />
       <fileset dir="${build.tmp}/default/com.dslfoundry.plaintextgen-generator.jar" />
     </jar>
@@ -111,7 +109,7 @@
     <copyModels todir="${build.tmp}/customProcessors/copyModels/languages-com.dslfoundry.plaintextgen-models">
       <fileset dir="${basedir}/languages/com.dslfoundry.plaintextgen/models" includes="**/*.mps, **/*.metadata, **/*.history, **/*.mpsr, **/.model" />
     </copyModels>
-    <jar destfile="${build.tmp}/default/com.dslfoundry.plaintextgen.zip/com.dslfoundry.plaintextgen/languages/com.dslfoundry.plaintextgen/com.dslfoundry.plaintextgen-src.jar" duplicate="preserve">
+    <jar destfile="${build.layout}/com.dslfoundry.plaintextgen/languages/com.dslfoundry.plaintextgen/com.dslfoundry.plaintextgen-src.jar" duplicate="preserve">
       <fileset dir="${basedir}/languages/com.dslfoundry.plaintextgen/generator/source_gen">
         <exclude name="**/trace.info" />
         <exclude name="**/exports" />
@@ -139,7 +137,7 @@
         <sources jar="com.dslfoundry.plaintextgen.build-src.jar" descriptor="com.dslfoundry.plaintextgen.build.msd" />
       </module>
     </echoxml>
-    <jar destfile="${build.tmp}/default/com.dslfoundry.plaintextgen.zip/com.dslfoundry.plaintextgen/languages/com.dslfoundry.plaintextgen/com.dslfoundry.plaintextgen.build.jar" duplicate="preserve">
+    <jar destfile="${build.layout}/com.dslfoundry.plaintextgen/languages/com.dslfoundry.plaintextgen/com.dslfoundry.plaintextgen.build.jar" duplicate="preserve">
       <fileset dir="${build.tmp}/java/out/com.dslfoundry.plaintextgen.build" />
       <fileset dir="${basedir}/solutions/com.dslfoundry.plaintextgen.build" includes="icons/**, resources/**" />
       <fileset dir="${basedir}/solutions/com.dslfoundry.plaintextgen.build/source_gen" includes="**/trace.info, **/exports, **/*.mps, **/checkpoints" />
@@ -148,7 +146,7 @@
     <copyModels todir="${build.tmp}/customProcessors/copyModels/solutions-com.dslfoundry.plaintextgen.build-models">
       <fileset dir="${basedir}/solutions/com.dslfoundry.plaintextgen.build/models" includes="**/*.mps, **/*.metadata, **/*.history, **/*.mpsr, **/.model" />
     </copyModels>
-    <jar destfile="${build.tmp}/default/com.dslfoundry.plaintextgen.zip/com.dslfoundry.plaintextgen/languages/com.dslfoundry.plaintextgen/com.dslfoundry.plaintextgen.build-src.jar" duplicate="preserve">
+    <jar destfile="${build.layout}/com.dslfoundry.plaintextgen/languages/com.dslfoundry.plaintextgen/com.dslfoundry.plaintextgen.build-src.jar" duplicate="preserve">
       <fileset dir="${basedir}/solutions/com.dslfoundry.plaintextgen.build/source_gen">
         <exclude name="**/trace.info" />
         <exclude name="**/exports" />
@@ -158,9 +156,6 @@
       <zipfileset file="${basedir}/solutions/com.dslfoundry.plaintextgen.build/com.dslfoundry.plaintextgen.build.msd" prefix="module" />
       <zipfileset dir="${build.tmp}/customProcessors/copyModels/solutions-com.dslfoundry.plaintextgen.build-models" prefix="module/models" />
     </jar>
-    <zip destfile="${build.layout}/com.dslfoundry.plaintextgen.zip">
-      <fileset dir="${build.tmp}/default/com.dslfoundry.plaintextgen.zip" />
-    </zip>
     <echo file="${build.layout}/build.properties">mps.build.number=${mps.build.number}${line.separator}mps.date=${mps.date}${line.separator}mps.build.vcs.number=${mps.build.vcs.number}${line.separator}mps.teamcity.buildConfName=${mps.teamcity.buildConfName}${line.separator}mps.idea.platform.build.number=${mps.idea.platform.build.number}${line.separator}mps.mps.build.counter=${mps.mps.build.counter}${line.separator}mpsBootstrapCore.version=${mpsBootstrapCore.version}</echo>
   </target>
   
