--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ jdk:
 before_install: wget https://download-cf.jetbrains.com/mps/2018.1/MPS-2018.1.zip
 install: unzip MPS-2018.1.zip
 script: ant -Dmps_home=./MPS\ 2018.1 clean generate assemble
-before_deploy: cd build/artifacts/com.dslfoundry.plaintextgen; zip -r com.dslfoundry.plaintextgen-MPS-2018.1.zip com.dslfoundry.plaintextgen
+before_deploy: cd build/artifacts/com.dslfoundry.plaintextgen; zip -r com.dslfoundry.plaintextgen-MPS-2018.1.zip com.dslfoundry.plaintextgen; cd -
 deploy:
   provider: releases
   api_key:
