--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: java
 jdk:
 - oraclejdk8
-before_install: wget http://download.jetbrains.com/mps/2017.2/MPS-2017.2.zip
-install: unzip MPS-2017.2.zip
+before_install: wget https://download.jetbrains.com/mps/2017.2/MPS-2017.2.3.zip
+install: unzip MPS-2017.2.3.zip
 script: ant -Dmps_home=./MPS\ 2017.2 clean generate assemble
 before_deploy: mv build/artifacts/com.dslfoundry.plaintextgen/com.dslfoundry.plaintextgen.zip build/artifacts/com.dslfoundry.plaintextgen/com.dslfoundry.plaintextgen-MPS-2017.2.zip
 deploy:
